@@ -1,7 +1,7 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.4
+Version: 0.99.60.5
 Date: 2025-05-17
 Authors@R: c(
   person(given="Andri", family="Signorell", 
