@@ -11,7 +11,7 @@ UPDATED FUNCTIONS:
   * XLView() uses write_xlsx instead write.table allowing better support
     for non ASCII characters.
   * CutAge() gains a new argument full, allowing to remove empty
-    levels at the edges of the distribution.  
+    levels at the edges of the distribution.
 	
     
 BUGFIXES:
@@ -20,6 +20,8 @@ BUGFIXES:
     (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
   * ICC() no longer fails when "type" argument is set to anything other 
     than "all". (Credit to Alphonse Kwizera)
+  * PercentRank() now subtracts 1 in nominator and denominator ensuring
+    the scale runs from 0 to 1.  
 
 
 
